@@ -7366,9 +7366,6 @@ AT_CLEANUP
 AT_SETUP([READ INPUT pipe & WRITE OUTPUT pipe])
 AT_KEYWORDS([runfile])
 
-# not implemented in 2.2+
-AT_XFAIL_IF([true])
-
 AT_DATA([test-data-in],
 [NAME
 STREET
@@ -17349,6 +17346,207 @@ Key: OLD00000 is OLD TYME PIZZA MFG. CO.   Disk=8470    .
 Key: PRE00000 is PRESTIGE OFFICE FURNITURE Disk=8470    .
 Hit End of File after 11
 ], [])
+
+AT_CLEANUP
+
+AT_SETUP([PIPE I/O])
+AT_KEYWORDS([PIPE])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+      
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+           SELECT PIPEIO 
+           ASSIGN TO PIPE-CMD
+           ORGANIZATION LINE SEQUENTIAL
+           FILE STATUS IS CUST-STAT .
+
+       DATA  DIVISION.
+       FILE SECTION.
+       FD  PIPEIO
+           BLOCK CONTAINS 5 RECORDS.
+       01  INP-RECORD                          PIC X(16).
+
+       WORKING-STORAGE SECTION.
+       01  PIPE-CMD                            PIC X(40).
+       01  CUST-STAT                           PIC XX.
+       01  SUB                                 PIC 9(2).
+       01  OPRN1                               PIC 9(3).
+       01  OPRN2                               PIC 9(3).
+       01  RSLT                                PIC 9(4).
+       01  CMD-LINE.
+           05  CMD                             PICTURE X(8).
+           05  FILLER                          PICTURE X.
+           05  CMD-KEY                         PICTURE X(8).
+       01  ADD-LINE.
+           05  NUM                             PICTURE 9(3).
+           05  FILLER                          PICTURE X(8).
+      
+       PROCEDURE DIVISION.
+      
+       MAINFILE.
+           ACCEPT CMD-LINE FROM COMMAND-LINE.
+           IF CMD = 'HELLO'
+               DISPLAY "Bye Bye"
+               DISPLAY "Birdie"
+               STOP RUN
+           END-IF.
+           IF CMD = 'ECHO'
+               ACCEPT CMD-LINE FROM CONSOLE
+               DISPLAY "Echo: " CMD-LINE ":"
+               ACCEPT CMD-LINE FROM CONSOLE
+               DISPLAY "Echo: " CMD-LINE ":"
+               STOP RUN
+           END-IF.
+           IF CMD = 'ADD'
+               ACCEPT ADD-LINE FROM CONSOLE
+               MOVE NUM TO OPRN1
+               ACCEPT ADD-LINE FROM CONSOLE
+               MOVE NUM TO OPRN2
+               COMPUTE RSLT = OPRN1 + OPRN2
+               DISPLAY "Result: " OPRN1 " + " OPRN2 " is " RSLT
+               STOP RUN
+           END-IF.
+      
+           PERFORM READPIPE.
+           PERFORM WRITEPIPE.
+           PERFORM ADD-PIPE.
+           PERFORM BAD-MODE.
+           PERFORM BAD-PIPE.
+           STOP RUN.
+
+       READPIPE.
+           MOVE "<./prog    HELLO" TO PIPE-CMD
+           DISPLAY "Show input from pipe".
+           OPEN INPUT PIPEIO.
+           PERFORM VARYING SUB FROM 1 BY 1
+                    UNTIL SUB > 50
+                      OR CUST-STAT NOT = "00"
+             READ PIPEIO
+             IF CUST-STAT = '00'
+                 DISPLAY SUB ": " INP-RECORD ":"
+             END-IF
+           END-PERFORM.
+           CLOSE PIPEIO.
+      
+       WRITEPIPE.
+           MOVE ">./prog    ECHO " TO PIPE-CMD
+           DISPLAY "Send data out pipe".
+           OPEN OUTPUT PIPEIO.
+           MOVE "Having" TO INP-RECORD
+           WRITE INP-RECORD.
+           MOVE "Fun Yet?" TO INP-RECORD
+           WRITE INP-RECORD.
+           CLOSE PIPEIO.
+
+       ADD-PIPE.
+           MOVE "|./prog    ADD " TO PIPE-CMD
+           DISPLAY "Exchange data via pipe".
+           OPEN I-O PIPEIO.
+           MOVE "001" TO INP-RECORD
+           WRITE INP-RECORD.
+           MOVE "003" TO INP-RECORD
+           WRITE INP-RECORD.
+           READ PIPEIO.
+           DISPLAY "Answer :" INP-RECORD ":"
+           CLOSE PIPEIO.
+
+       BAD-PIPE.
+           MOVE "<./saywhat Foobar " TO PIPE-CMD
+           DISPLAY "Pipe read from unknown program.".
+           MOVE 'Peek a Boo' TO INP-RECORD
+           OPEN INPUT PIPEIO.
+           IF CUST-STAT NOT = '00'
+               DISPLAY "Bad Open status:" CUST-STAT
+           ELSE
+               READ PIPEIO
+               DISPLAY "Stat:" CUST-STAT ", Answer :" INP-RECORD ":"
+               CLOSE PIPEIO
+           END-IF.
+           MOVE ">./saywhat Foobar " TO PIPE-CMD
+           DISPLAY "Pipe write to unknown program.".
+           OPEN INPUT PIPEIO.
+           IF CUST-STAT NOT = '00'
+               DISPLAY "Bad Open status:" CUST-STAT
+           ELSE
+               MOVE 'Peek a Boo' TO INP-RECORD
+               WRITE INP-RECORD
+               DISPLAY "Stat:" CUST-STAT ", Sent :" INP-RECORD ":"
+               CLOSE PIPEIO
+           END-IF.
+           MOVE "|./saywhat Foobar " TO PIPE-CMD
+           DISPLAY "Pipe to unknown program.".
+           OPEN I-O PIPEIO.
+           IF CUST-STAT NOT = '00'
+               DISPLAY "Bad Open status:" CUST-STAT
+           ELSE
+               MOVE "001" TO INP-RECORD
+               WRITE INP-RECORD 
+               IF CUST-STAT NOT = '00'
+                  DISPLAY "Bad Write status:" CUST-STAT
+               END-IF
+               MOVE "003" TO INP-RECORD
+               WRITE INP-RECORD 
+               READ PIPEIO 
+               IF CUST-STAT NOT = '00'
+                  DISPLAY "Bad Read status:" CUST-STAT
+               ELSE
+                  DISPLAY "Answer :" INP-RECORD ":"
+               END-IF
+               CLOSE PIPEIO 
+           END-IF.
+
+       BAD-MODE.
+           MOVE "<./prog    ECHO " TO PIPE-CMD
+           DISPLAY "Open pipe output mode mismatch".
+           OPEN OUTPUT PIPEIO.
+           IF CUST-STAT NOT = '00'
+               DISPLAY "Bad Mode Open status:" CUST-STAT
+           ELSE
+               MOVE "How did" TO INP-RECORD
+               WRITE INP-RECORD
+               MOVE "I get here" TO INP-RECORD
+               WRITE INP-RECORD
+           END-IF.
+           CLOSE PIPEIO.
+
+           MOVE ">./prog    HELLO " TO PIPE-CMD
+           DISPLAY "Open pipe input mode mismatch".
+           OPEN INPUT PIPEIO.
+           IF CUST-STAT NOT = '00'
+               DISPLAY "Bad Mode Open status:" CUST-STAT
+           ELSE
+               READ PIPEIO
+               DISPLAY "Got : " INP-RECORD ":"
+               CLOSE PIPEIO
+           END-IF.
+])
+
+AT_CHECK([$COBC -x -std=default -w prog.cob ], [0], [], [])
+
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [Show input from pipe
+01: Bye Bye         :
+02: Birdie          :
+Send data out pipe
+Echo: Having           :
+Echo: Fun Yet?         :
+Exchange data via pipe
+Answer :Result: 001 + 00:
+Open pipe output mode mismatch
+Bad Mode Open status:37
+Open pipe input mode mismatch
+Bad Mode Open status:37
+Pipe read from unknown program.
+Stat:10, Answer :Peek a Boo      :
+Pipe write to unknown program.
+Bad Open status:37
+Pipe to unknown program.
+Bad Read status:10
+], [ignore])
 
 AT_CLEANUP
 
