@@ -1833,6 +1833,7 @@ AT_CLEANUP
 
 AT_SETUP([OPEN I-O with LINE SEQUENTIAL])
 AT_KEYWORDS([file])
+AT_XFAIL_IF([true])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
