@@ -1,4 +1,9 @@
 
+2020-04-14  Ron Norman <rjn@inglenet.com>
+
+	* typeck.c: Remove ERROR for OPEN I-O of LINE SEQUENTIAL
+				OPEN I-O is required for bi-directional pipe
+
 2020-04-03  Ron Norman <rjn@inglenet.com>
 
 	* codegen.c: Based on 'align-record' 01s & 77s in LOCAL-STORAGE 
